# mystuff-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  PLAN.md  README.md  TODO.md  pyproject.toml  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: code-quality.yml  release.yml  test.yml
docs/: CLI.md  IMPLEMENTATION_0.1.md  IMPLEMENTATION_0.2.md  IMPLEMENTATION_0.3.md  IMPLEMENTATION_0.4.md  IMPLEMENTATION_0.5.md  IMPLEMENTATION_0.6.md  IMPLEMENTATION_0.7.md  PLAN.md  README.md
mystuff/: __init__.py  cli.py  interactive_selector.py  learning_catalog.py  markdown_utils.py
mystuff/commands/: __init__.py  eval.py  generate.py  init.py  journal.py  learn.py  link.py  lists.py  meeting.py  sync.py  wiki.py
mystuff/static/css/: style.css  style_old.css
mystuff/static/js/: site.js
mystuff/templates/: base.html  classification.html  index.html  index_old.html  learning.html  learning_old.html  lesson.html  lesson_old.html  links.html  links_old.html  roadmap.html  track.html
src/: args.rs  lib.rs  links.rs  main.rs  types.rs
src/datastore/: local.rs  memory.rs  mod.rs
tests/: links.rs  run_tests.sh  test1.rs  test_error_handling.py  test_eval_simple.py  test_fzf_integration.py  test_generate.py  test_github_stars.py  test_init.py  test_init_simple.py  test_interactive_selector.py  test_journal.py  test_journal_simple.py  test_learn.py  test_link.py  test_lists_simple.py  test_meeting.py  test_sync.py  test_wiki_simple.py
