[package]
name = "mystuff"
version = "0.1.1"
edition = "2021"
description = "MyStuff: links, wiki, log journal, etc."
license = "MIT"
keywords = ["utility", "personal", "productivity", "links", "wiki"]
repository = "https://github.com/jepemo/mystuff-cli"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
inquire = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
shellexpand = "3.0.0"
