[package]
name = "mystuff"
version = "0.1.2"
edition = "2021"
description = "MyStuff: links, wiki, log journal, etc."
license = "MIT"
keywords = ["utility", "personal", "productivity", "links", "wiki"]
repository = "https://github.com/jepemo/mystuff-cli"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
inquire = "0.5.3"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
shellexpand = "3.0.0"
